# dados-sisor-2025

./: README.md  datapackage.json  datapackage.yaml  pyproject.toml  requirements.txt
.github/workflows/: all.yaml
data/: base_categoria_pessoal.csv  base_limite_cota.csv  base_obras_siad.csv  base_orcam_despesa_investimento.csv  base_orcam_despesa_item_fiscal.csv  base_orcam_receita_fiscal.csv  base_qdd_fiscal.csv  base_qdd_plurianual.csv  base_qdd_plurianual_invest.csv  base_unidades_orcamentaria_versoes.csv
data-raw/: base_categoria_pessoal.html  base_detalhamento_obras.html  base_intra_orcamentaria_detalhamento.html  base_intra_orcamentaria_repasse.html  base_limite_cota.html  base_obras_siad.html  base_orcam_despesa_investimento.html  base_orcam_receita_fiscal.html  base_orcam_receita_investimento.html  base_qdd_investimento.html  base_qdd_plurianual.html  base_qdd_plurianual_invest.html  base_repasse_recursos.html  base_unidades_orcamentaria_versoes.html
schemas/: base_orcam_receita_fiscal.yaml  base_qdd_fiscal.yaml
